# python-learning-lab

./: 404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
basic/variable/: index.html
docs/: index.md
docs/basic/: variable.md
learning/: simple_calculator.py
learning/basic/: basic_variable.py
search/: search_index.json
tests/: test_basic_variable.py  test_simple_calculator.py
