[project]
name = "python-learning-lab"
version = "0.1.0"
description = "Personal documentation of my Python journey and experiments"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "python-semantic-release>=10.2.0",
    "ruff>=0.12.5",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
    "mkdocstrings[python]>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "."